# stillframe

./: .gitignore  README.md  pyproject.toml
stillframe/: config.py  connection_manager.py  extensions.py  image_source.py  popdeque.py  server.py
templates/: admin.html  client.html  still.html
