[tool.poetry]
name = "stillframe"
version = "0.1.0"
description = "Use video frames as images for live displays"
authors = ["Ben Berry <bengerman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
websockets = "^14.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
